# thrustshift

./: .clang-format  .cmake-format.py  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md
app/: CMakeLists.txt  bench-bin-values256.cu  bench-k-selection.cu
include/thrustshift/: COO.h  CSR.h  allocator.h  arithmetic-multi-iterator-reference.h  axmy.h  axpy.h  bit.h  constant.h  constval.h  container-conversion.h  copy.h  defines.h  eigen3  equal.h  fill.h  for-each.h  functional.h  gather.h  histogram.h  iota.h  k-selection.h  managed-allocator.h  managed-vector.h  math.h  memory-resource.h  multi-iterator.h  not-a-vector.h  numeric.h  os-utility.h  permutation.h  prefetch.h  random.h  reduction.h  scan.h  scatter.h  select-if.h  shfl.h  sort.h  span-utility.h  transform.h  (+4 more)
include/thrustshift/eigen3-interface/: COO.h  CSR.h  README
script/: make-k-selection-performance-plots.R
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  memory-resource-check.h  test-array-transform.cu  test-array-tuple-transform.cu  test-bit-successive-permutation.cu  test-block-copy.cu  test-container-conversion.cu  test-coo.cu  test-count-leading-zeros.cu  test-csr.cu  test-for-each.cu  test-k-selection.cu  test-math.cu  test-memory-resource.cpp  test-memory-resource.cu  test-multi-iterator.cu  test-not-a-vector.cu  test-sort.cu  test-tuple-to-string.cu  test-type-traits.cu  test-wrap-subgroups.cu
